exercises/2/cheese-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheddar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheddar
  template:
    metadata:
      labels:
        app: cheddar
    spec:
      containers:
      - name: cheddar
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cheddar-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: cheddar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gauda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gauda 
  template:
    metadata:
      labels:
        app: gauda 
    spec:
      containers:
      - name: gauda 
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gauda-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: gauda
